# text-classifier

./: .gitignore  pyproject.toml  pytest.ini
src/api/: main.py  models.py
src/text_classifier/: __init__.py  classifier.py  features.py  logger.py  nlp.py  parser.py  vocabulary.py  word_reader.py
static/: index.html
tests/: test_classifier.py  test_features.py  test_parser.py  test_vocabulary.py  test_word_reader.py  utils.py
