[project]
name = "text-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yaash Jain", email = "yaash.jain45@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.120.0",
    "numpy>=2.3.3",
    "pydantic>=2.12.2",
    "pytest>=8.4.2",
    "spacy>=3.8.7",
]

[project.scripts]
text-classifier = "text_classifier:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
